# configevaluater

./: LICENSE  MANUAL.md  README.md  setup.cfg
examples/: edge-cases.env  insecure.env  malformed.env  secure.env
src/configevaluater/: __init__.py  __main__.py  cli.py  models.py  parser.py  reporter.py  rules.py
tests/: test_cli.py  test_parser.py  test_rules.py
tests/fixtures/: all-insecure.env  duplicate.env  local-http.env  malformed.env  parser-cases.env  secure.env
