[metadata]
name = configevaluater
version = 0.1.0
description = Offline security linter for .env configuration files
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    configevaluater = configevaluater.cli:main

